--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -47,7 +47,7 @@ reward_type: 2
 # 打赏wording
 reward_wording: '谢谢你支持我买服务器~'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
-alipay: /assets/img/alipay.jpg
+alipay: /img/preloader.gif
 # 微信二维码图片地址
 weixin: 
 
