增加百度指数

--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -63,7 +63,7 @@ toc_empty_wording: '目录，不存在的…'
 top: true
 
 # Miscellaneous
-baidu_analytics: ''
+baidu_analytics: '90435c7041fa2039a7b3006b5b47a76e'
 google_analytics: ''
 favicon: /favicon.png
 
